--- a/.gitignore
+++ b/.gitignore
@@ -161,5 +161,9 @@ cython_debug/
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 #.idea/
 
+
+# macOS system files
 .DS_Store
+
+# VS Code settings
 .vscode/
